hphp/test/slow/reified_generics/param-verification-10.php.expectf
Catchable fatal error: Argument 1 passed to C::f() must be an instance of A<int, int>, A<int,string> given in %s on line 11
